--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -33,7 +33,7 @@ jobs:
           file: ./Dockerfile
           push: true
           build-args: |
-            PUBLIC_API_URL=https://demo.api.letsrevel.io
+            PUBLIC_API_URL=https://demo-api.letsrevel.io
             ORIGIN=https://demo.letsrevel.io
           tags: |
             ghcr.io/letsrevel/revel-frontend:latest
